--- a/src/views/book_information.html
+++ b/src/views/book_information.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    <script src="../js/handlebars-v4.7.6.js"></script>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
-            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img"
+                    src="../img/ibdb_logo.png" alt="Logo"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -32,38 +41,35 @@
                 </div>
             </div>
         </nav>
-        <div class="card mb-3 jumbotron">
-            <h3 class="card-header">THE OUTSIDER</h3>
-            <div class="card-body">
-                <h5 class="card-title">Stephen King</h5>
-                <div style="clear: both;">
-                    <h6 style="float: left;" class="card-subtitle text-muted">Published 2018 by Hodder and Stoughton
-                    </h6>
-                    <h6 style="float: right;" class="card-subtitle text-muted">ISBN: 1473676355</h6>
-                </div>
-            </div>
-            <div class="card-body">
-                <p class="card-text"> <img id="the-outsider-img" src="../img/the_ousider.jpg" alt="The Outsider"> In The Outsider, an unspeakable crime takes place involving the murder and violation of a small boy. Ralph Anderson is the detective on the case, and he arrests
-                    a local man, Terry Maitland. It’s an easy arrest and their evidence is airtight. The problem is, cracks in the case begin to appear when it seems that perhaps Maitland has an equally airtight alibi. As tensions rise and the investigation
-                    proceeds, the bit and pieces of information Ralph uncovers are equal parts horrifying and intriguing.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Genres</li>
-                <div class="card-body">
-                    <a href="#first" class="card-link">Murder</a>
-                    <a href="#second" class="card-link">Investigation</a>
-                    <a href="#third" class="card-link">Rape victims</a>
-                    <a href="#fourth" class="card-link">Criminal evidence</a>
-                    <a href="#fifth" class="card-link">Shapeshifters</a>
-                </div>
-                <button id="readme" type="button" class="btn btn-outline-warning">READ ME</button>
-            </ul>
-
-            <div class="card-footer text-muted">
-                2 days ago
-            </div>
-        </div>
+        <div id="book-info" class="card mb-3 jumbotron"></div>
     </div>
+
+    <script id="book-template" type="text/x-handlebars-template">
+    <h3 class="card-header">{{title}}</h3>
+    <div class="card-body">
+        <h5 class="card-title">Written by:&nbsp;&nbsp;&nbsp; {{#each authors}} <a href="{{this.url}}" class="card-link">{{this.name}}</a> {{/each}}</h5>
+        <p class="card-text"> <img id="the-outsider-img" src="{{covers.medium}}" alt="The Outsider">{{notes}}</p>
+        <p class="card-subtitle text-muted">ISBN: {{ISBN}}</p>
+        <p class="card-subtitle text-muted">Amazon: {{amazon}}</p>
+        <p class="card-subtitle text-muted">Open Library: {{open_library}}</p></br> 
+        <p class="card-subtitle">Published {{publish_date}} by {{publisher}}</p>
+        <p class="card-subtitle">Number of pages: {{number_of_pages}}</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Tags</li>
+        <div class="card-body">
+            {{#each subjects}}
+            <a href="{{this.url}}" class="card-link">{{this.name}}</a>
+            {{/each}}
+        </div>
+        <button id="readme" type="button" class="btn btn-outline-warning">READ ME</button>
+    </ul>
+
+    <div class="card-footer text-muted">2 days ago</div>
+    </script>
+
+    <script src="../js/render-book.js"></script>
+
 </body>
 
 </html>
