--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    <script src="../js/handlebars-v4.7.6.js"></script>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
-            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img"
+                    src="../img/ibdb_logo.png" alt="Logo"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -33,10 +42,11 @@
             </div>
         </nav>
         <div class="jumbotron">
-            <div class="list-group">
+            <div id="book-list" class="list-group">
                 <a href="#first" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/the_ousider.jpg" alt="The outsider">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
+                            src="../img/the_ousider.jpg" alt="The outsider">
                         <div>
                             <h5 class="mb-1">THE OUTSIDER</h5>
                             <p class="mb-1">Stephen King</p>
@@ -49,7 +59,8 @@
                 </a>
                 <a href="#second" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/orient_express.png" alt="Murder on the Orient Express">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
+                            src="../img/orient_express.png" alt="Murder on the Orient Express">
                         <div>
                             <h5 class="mb-1">MURDER ON THE ORIENT EXPRESS</h5>
                             <p class="mb-1">Agatha Christie</p>
@@ -62,7 +73,8 @@
                 </a>
                 <a href="#third" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/clockwork_orange.jpg" alt="Clockwork orange">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
+                            src="../img/clockwork_orange.jpg" alt="Clockwork orange">
                         <div>
                             <h5 class="mb-1">CLOCKWORK ORANGE</h5>
                             <p class="mb-1">Anthony Burgess</p>
@@ -74,7 +86,8 @@
                 </a>
                 <a href="#fourth" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/pet_sematary.jpg" alt="1984">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
+                            src="../img/pet_sematary.jpg" alt="1984">
                         <div>
                             <h5 class="mb-1">PET SEMATARY</h5>
                             <p class="mb-1">Stephen King</p>
@@ -88,7 +101,8 @@
                 </a>
                 <a href="#fifth" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/1984.jpg" alt="1984">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
+                            src="../img/1984.jpg" alt="1984">
                         <div>
                             <h5 class="mb-1">1984</h5>
                             <p class="mb-1">George Orwell</p>
@@ -102,6 +116,12 @@
             </div>
         </div>
     </div>
+
+    <script id="book-list-template" type="text/x-handlebars-template">
+<!-- TODO: Insert template here -->
+    </script>
+
+    <script src="../js/render-book-list.js"></script>
 </body>
 
 </html>
