--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -55,22 +55,50 @@
                 <fieldset>
                     <legend id="email-input-text" class="card-header">SEND US AN EMAIL</legend>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <!-- <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="email-address" aria-describedby="emailHelp" placeholder="Enter email">
-                    
-                        <div class="alert alert-dismissible alert-danger">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <strong>Oh snap!</strong> and try submitting again.
+                    -->
+
+                        <div class="form-group has-danger">
+                            <label class="form-control-label" for="email-address">Email address</label>
+                            <input type="email" class="form-control" id="email-address" placeholder="Enter email address">
+                            <div class="invalid-feedback">Please, fill in your email address!</div>
                         </div>
                     
+                        <!-- <div class="alert alert-dismissible alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <strong>Oh snap!</strong> and try submitting again.
+                        </div> -->
+                    
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputName">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Name">
+                        <!-- <label for="exampleInputName">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Name"> -->
+
+                        <div class="form-group has-danger">
+                            <label class="form-control-label" for="name">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter name">
+                            <div class="invalid-feedback">Please, fill in your name</div>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="emailTextarea">Text</label>
-                        <textarea class="form-control" id="text" rows="3"></textarea>
+                        <!-- <label for="emailTextarea">Text</label>
+                        <textarea class="form-control" id="text" rows="3"></textarea> -->
+                        <div class="form-group has-danger">
+                            <label class="form-control-label" for="text">Text</label>
+                            <textarea type="text" class="form-control is-invalid" id="text" placeholder="Enter your text"></textarea>
+                            <div class="invalid-feedback">Please, fill in text area</div>
+                        </div>
+                    </div>
+
+                    <div id="email-fail" class="alert alert-dismissible alert-danger hidden">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>We are sorry, </strong> we couldn't receive your email.
+                    </div>
+
+                    <div id="email-success" class="alert alert-dismissible alert-success hidden">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>Thank you! </strong> We appreciate your feedback!
                     </div>
 
                     <button type="submit" class="btn btn-warning" id="send-button">Send</button>
